--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "b
 bevy_kira_audio = { version = "0.13" }
 bevy_asset_loader = { version = "0.14" }
 rand = { version = "0.8.3" }
+bevy-inspector-egui = "0.17"
 
 # keep the following in sync with Bevy's dependencies
 winit = { version = "0.27", default-features = false }
