--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ bevy_kira_audio = { version = "0.13" }
 bevy_asset_loader = { version = "0.14" }
 rand = { version = "0.8.3" }
 bevy-inspector-egui = "0.17"
+bevy_atmosphere = "0.5.0"
 
 # keep the following in sync with Bevy's dependencies
 winit = { version = "0.27", default-features = false }
